; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/vbscript/extr_run.c_parse_script_ar.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/vbscript/extr_run.c_parse_script_ar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCRIPTITEM_GLOBALMEMBERS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @parse_script_ar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_script_ar(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @a2bstr(i8* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @SCRIPTITEM_GLOBALMEMBERS, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @parse_script(i32 %7, i32 %8, i32* null)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @SysFreeString(i32 %10)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local i32 @a2bstr(i8*) #1

declare dso_local i32 @parse_script(i32, i32, i32*) #1

declare dso_local i32 @SysFreeString(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
